data/derived/comb/progs/unify/prog4819.ml.out
Characters 18-25:
  let _ = sepConcat ["foo"];;
                    ^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type string
